implemented  /profile/requestcalculation with s3 storage usage
