# openapi/v1/schema.yaml
@@ -335,8 +335,12 @@ paths:
             schema:
               $ref: '#/components/schemas/RequestCalculationRequest'
       responses:
-        '204':
+        '200':
           description: Calculation requested
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RequestCalculationResponse'
         '401':
           description: Unauthorized
           content:
@@ -500,12 +504,11 @@ components:
           type: string
           example: Automotive parts
         weight:
-          type: integer
-          minimum: 0
+          type: string
           description: Weight in KG
         volume:
-          type: integer
-          minimum: 0
+          type: string
+          description: Volume in m^3
         link:
           type: string
           example: 'https://factory.domain/carparts.png'
@@ -515,6 +518,13 @@ components:
         comment:
           type: string
           example: Please call ASAP
+
+    RequestCalculationResponse:
+      type: object
+      properties:
+        fileUploadFailed:
+          type: boolean
+          description: True IFF file uploaded failed
 
     RegisteredResponse:
       type: object
